--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3001", 
-    "build": "next build", 
+    "dev": "next dev -p 3001",
+    "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.89.0",
     "lucide-react": "^0.546.0",
     "mysql2": "^3.15.2",
     "next": "15.5.6",
